--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -279,7 +279,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
-            margin-left: 180px; /* Move left to align with like count */
+            margin-left: auto;
         }
 
         .artist-name {
